# gg_ws

./: .gitignore  README.md
command_msgs/: CMakeLists.txt  package.xml
command_msgs/msg/: Command.msg
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/bt_config/: custom_nav_through_poses.xml  custom_nav_to_poses.xml
cpp_pubsub/launch/: costmap_launch.py  get_map_path_launch.py  path_from_csv_launch.py  tb3_simulation_launch.py
cpp_pubsub/maps/: 4F_2_ex.pgm  4F_2_ex.yaml  map_0223_LG2_indoor.pgm  map_0223_LG2_indoor.yaml  map_0402_4F.pgm  map_0402_4F.yaml  map_0402_LG2_slope.yaml  map_2022-06-05-21-43-38_new_ok.pgm  map_2022-06-05-21-43-38_new_ok.yaml  map_LG2_indoor_0616_2_2023-06-16-12-23-40.pgm  map_LG2_indoor_0616_2_2023-06-16-12-23-40.yaml  turtlebot3_world.yaml  turtlebot3_world_blank.pgm
cpp_pubsub/params/: my_custom_costmap.yaml  nav2_params.yaml
cpp_pubsub/path/: .~lock.123.csv#  123.csv  4F_2_ex.csv  4F_2_ex_2.csv  4F_2_ex_3_1.csv  4F_2_ex_3_2.csv  asd.csv  map3.csv  map_0223_LG2_indoor.csv  map_0402_4F.csv  map_0402_4F_2.csv  map_0402_LG2_slope_2.csv  map_0402_LG2_slope_test.csv  map_2022-06-05-21-43-38_new_ok.csv  map_2022-06-05-21-43-38_new_ok23.csv  map_LG2_indoor_0616_2_2023-06-16-12-23-40.csv  test.csv
cpp_pubsub/rviz/: test.rviz
cpp_pubsub/scripts/: costmap_detect.py  follow_path.py  get_map_path.py  obstacle_detect.py  path_from_csv.py  pub.py  sub.py  testdd.py  uihandle.py  vel_smooth.py  weee.py
cpp_pubsub/src/: pub.cpp  sub.cpp
nav2_simple_commander/nav2_simple_commander/: robot_navigator.py
navigation2-galactic/nav2_behavior_tree/plugins/action/: remove_passed_goals_action.cpp
navigation2-galactic/nav2_bringup/bringup/launch/: navigation_launch.py
navigation2-galactic/nav2_bt_navigator/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
navigation2-galactic/nav2_recoveries/include/nav2_recoveries/: recovery.hpp
